reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-content__src__validate.rs_line_162_col_5_001.log

*** crates/tracewake-content/src/validate.rs:162:5: replace validate_fixture_errors -> Vec<ContentValidationError> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-content/src/validate.rs
+++ replace validate_fixture_errors -> Vec<ContentValidationError> with vec![Default::default()]
@@ -154,36 +154,17 @@
         validation_token: FixtureValidationToken::mint(),
     }
 }
 
 fn validate_fixture_errors(
     fixture: &FixtureSchema,
     registry: &ActionRegistry,
 ) -> Vec<ContentValidationError> {
-    let mut errors = Vec::new();
-    validate_schema_version(fixture, &mut errors);
-    validate_ids(fixture, &mut errors);
-    validate_references(fixture, &mut errors);
-    validate_locations(fixture, &mut errors);
-    validate_topology(fixture, &mut errors);
-    validate_state(fixture, &mut errors);
-    validate_action_registry_parity(fixture, registry, &mut errors);
-    validate_routine_rules(fixture, registry, &mut errors);
-    validate_phase3a_sleep_surface_contract(fixture, &mut errors);
-    validate_semantic_ids(fixture, &mut errors);
-    validate_no_player(fixture, &mut errors);
-    validate_no_script(fixture, &mut errors);
-    validate_id_shortcut_markers(fixture, &mut errors);
-    validate_phase3a_no_shortcuts(fixture, &mut errors);
-    validate_epistemic_seeds(fixture, registry, &mut errors);
-    validate_determinism(fixture, &mut errors);
-    validate_fixture_contract(fixture, &mut errors);
-    validate_serialization_roundtrip(fixture, &mut errors);
-    errors
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn validate_schema_version(fixture: &FixtureSchema, errors: &mut Vec<ContentValidationError>) {
     if fixture.schema_version.as_str() != FIXTURE_SCHEMA_V1 {
         errors.push(ContentValidationError::new(
             ValidationPhase::ParseSchema,
             "fixture.schema_version",
             "unsupported_fixture_schema_version",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content): the file `crates/tracewake-content/src/validate.rs` has changed (1781903897.451925249s, 2s after last build at 1781903895.391925246s)
   Compiling tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content)
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/tests/../../tracewake-content/src/validate.rs` has changed (1781903897.451925249s, 2s after last build at 1781903895.391925246s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name hidden_truth_gates --edition=2021 crates/tracewake-core/tests/hidden_truth_gates.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=6827b5805fd85fab -C extra-filename=-499dcae7fdb8d686 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta`
error[E0277]: the trait bound `ContentValidationError: Default` is not satisfied
   --> crates/tracewake-content/src/validate.rs:162:10
    |
162 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ContentValidationError`
   --> crates/tracewake-content/src/validate.rs:69:1
    |
 69 | pub struct ContentValidationError {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-content` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-content` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib` (exit status: 1)

*** result: Failure(101)
